--- a/package.json
+++ b/package.json
@@ -5,11 +5,25 @@
     "start": "webpack && node app/app.js"
   },
   "dependencies": {
-    "babel-core": "^6.7.0",
+    "babel-core": "^6.7.2",
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "cheerio": "^0.20.0",
+    "eslint": "^2.4.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.2.1",
+    "estraverse-fb": "^1.3.1",
     "express": "^4.13.4",
+    "flux": "^2.1.1",
+    "material-ui": "^0.14.4",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-hot-loader": "^1.3.0",
+    "react-map-styles": "^0.3.0",
+    "react-tap-event-plugin": "^0.2.2",
+    "reactcss": "^0.4.5",
     "request": "^2.69.0",
     "webpack": "^1.12.14"
   }
